# Genetic-and-Memetic-Classification

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
results/: AGEST_ionosphere150421-ARI.txt  AGEST_ionosphere150421-BLX.txt  AGEST_ionosphere150421-BLXLS_10-0.10B.txt  AGEST_parkinsons150421-ARI.txt  AGEST_parkinsons150421-BLX.txt  AGEST_spectf-heart150421-ARI.txt  AGEST_spectf-heart150421-BLX.txt  AGGEN_ionosphere150421-ARI-0.txt  AGGEN_ionosphere150421-ARI-1.txt  AGGEN_ionosphere150421-ARI-2.txt  AGGEN_ionosphere150421-ARI-2LS_1-0.10.txt  AGGEN_ionosphere150421-ARI-2LS_1-0.10B.txt  AGGEN_ionosphere150421-ARI-2LS_1-1.00.txt  AGGEN_ionosphere150421-ARI-2LS_10-0.10.txt  AGGEN_ionosphere150421-ARI-2LS_10-0.10B.txt  AGGEN_ionosphere150421-ARI-2LS_10-1.00.txt  AGGEN_ionosphere150421-BLX-0.txt  AGGEN_ionosphere150421-BLX-1.txt  AGGEN_ionosphere150421-BLX-2LS_10-0.10.txt  AGGEN_ionosphere150421-BLX-2LS_10-0.10B.txt  AGGEN_ionosphere150421-BLX-2LS_10-1.00.txt  AGGEN_parkinsons150421-ARI-0.txt  AGGEN_parkinsons150421-ARI-1.txt  AGGEN_parkinsons150421-ARI-2.txt  AGGEN_parkinsons150421-ARI-2LS_1-0.10.txt  AGGEN_parkinsons150421-ARI-2LS_1-0.10B.txt  AGGEN_parkinsons150421-ARI-2LS_1-1.00.txt  AGGEN_parkinsons150421-ARI-2LS_10-0.10.txt  AGGEN_parkinsons150421-ARI-2LS_10-0.10B.txt  AGGEN_parkinsons150421-ARI-2LS_10-1.00.txt  AGGEN_parkinsons150421-BLX-0.txt  AGGEN_parkinsons150421-BLX-1.txt  AGGEN_parkinsons150421-BLX-2.txt  AGGEN_parkinsons150421-BLX-2LS_10-0.10.txt  AGGEN_parkinsons150421-BLX-2LS_10-0.10B.txt  AGGEN_parkinsons150421-BLX-2LS_10-1.00.txt  (+16 more)
(+57 files in other folders)
