PROJECT(CXX)
cmake_minimum_required(VERSION 3.16)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ADD_EXECUTABLE(AGGEN src/AGGEN.cpp src/mytools.cpp src/Euclidean.cpp src/ReadData.cpp
                src/Genetics.cpp)
ADD_EXECUTABLE(AGEST src/AGEST.cpp src/mytools.cpp src/Euclidean.cpp src/ReadData.cpp
                src/Genetics.cpp)
